Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>
 <a name="winners-of-build-it-with-nokia-lumia-1020-hackathon" class="anchor" href="#winners-of-build-it-with-nokia-lumia-1020-hackathon"><span class="octicon octicon-link"></span></a>Winners of Build It with Nokia Lumia 1020 Hackathon</h1>
 
-<hr><p>Check the <em><strong>Project website</strong></em> ---&gt; Here<a href="sidtechnical.github.io/#/bored">Here</a> for more.</p>
+<hr><p>Check the <em><strong>Project website</strong></em> ---&gt; <a href="sidtechnical.github.io/#/bored">Here</a> for more.</p>
 
 <p>Slide Puzzle is a windows phone application which was built during the two day hackathon help at <a href="http://startupsauna.com/">Startup Sauna</a>,Aalto University- Finland as part of "Build it with Nokia Lumia 2010" organized by <a href="www.appcampus.fi">AppCampus</a> in collaboration with Nokia Research and Microsoft Research.</p>
 
