Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <hr><p>Check the <em><strong>Project website</strong></em> ---&gt; <a href="http://sidtechnical.github.io/#/bored">Here</a> for more.</p>
 
-<p>Slide Puzzle is a windows phone application which was built during the two day hackathon help at <a href="http://startupsauna.com/">Startup Sauna</a>,Aalto University- Finland as part of "Build it with Nokia Lumia 2010" organized by <a href="www.appcampus.fi">AppCampus</a> in collaboration with Nokia Research and Microsoft Research.</p>
+<p>Slide Puzzle is a windows phone application which was built during the two day hackathon help at <a href="http://startupsauna.com/">Startup Sauna</a>,Aalto University- Finland as part of "Build it with Nokia Lumia 2010" organized by <a href="http://www.appcampus.fi/">AppCampus</a> in collaboration with Nokia Research and Microsoft Research.</p>
 
 <p><br>"Slide Puzzle" won the contest and the application will be available in windows market soon.<br></p>
 
